--- a/DOCUMENT/appendix-a.tex
+++ b/DOCUMENT/appendix-a.tex
@@ -46,3 +46,5 @@ As I taught LilyPond in a special topic course at the University of Delaware in 
 \end{itemize}
 
 
+
+\hyperref[sec:toc]{\textbf{Table of Contents}}
