--- a/DOCUMENT/clefs.tex
+++ b/DOCUMENT/clefs.tex
@@ -146,7 +146,7 @@ newpath
 \item See \hyperref[sec:comb_strings]{Prescriptive Notation for String Instruments} for a possible use of this clef.
 \end{enumerate}
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
