--- a/DOCUMENT/combinations.tex
+++ b/DOCUMENT/combinations.tex
@@ -1,7 +1,6 @@
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 
-
 \chapter {Combinations}
 
 This chapter presents examples that combine several snippets from the previous chapters. \textbf{Variables Used} provides a comprehensive list of all the variables required to generate the snippet. Among these, indented variables indicate "variables of a variable," i.e., dependent variables necessary for the main variables to function. The \textbf{Code} section only lists the score portion of the LilyPond code.
@@ -70,7 +69,7 @@ An example of a prescriptive notation for a string instrument. Vertical placemen
 
 \end{verbatim}
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -180,7 +179,7 @@ Invoking two or more Text Spanners (that require \verb|\stopTextSpan| for them t
 }
 \end{verbatim}
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
