--- a/DOCUMENT/foreword.tex
+++ b/DOCUMENT/foreword.tex
@@ -33,7 +33,7 @@ While LilyPond is "just" a music notation software program that I happened to ch
   
 For example, before transitioning to LilyPond, I briefly explored Dorico. However, as of late September 2024, its functionality for displaying straight flags was very limited; the angle of the straight flags provided by the software was too steep. I consulted the online forum and discovered that another user had posted a question similar to mine. The chief developer of Dorico responded to that post, noting that implementing improvements to this feature was possible but "not currently a high priority."\footnote{See: \url{https://forums.steinberg.net/t/straight-flags-angle/766503}.} In this tiered structure typical of capitalism, composers may find themselves with increasingly limited creative "freedom." 
 
-MakeMusic has heavily advertised on social media platforms that Finale users should migrate to Dorico because it is the "next industry standard." However, this advertising seems to discourage thoughtful consideration of alternatives, leaving little room for reflection or exploration. I have become increasingly disillusioned as I witness the coercion to invest in a program—however exciting it may appear—with no definite promise of its long-term security and stability.
+MakeMusic has heavily advertised on social media platforms that Finale users should migrate to Dorico because it is the "next industry standard." However, this advertising seems to discourage thoughtful consideration of alternatives, leaving little room for reflection or exploration. I became increasingly disillusioned as I witnessed the coercion to invest in a program—however exciting it may appear—with no definite promise of its long-term security and stability.
 
 Of course, it is not my intent to claim that all composers should abandon their proprietary programs of choice, particularly those they have invested money in and/or have been using for many years. It is, however, important to note that: 
 
@@ -41,7 +41,7 @@ Of course, it is not my intent to claim that all composers should abandon their 
 
 \item All proprietary programs are at the mercy of the executives who run the companies behind them. "Oh, [insert the name of a proprietary program] is operated by [insert the name of its company], and I just don't see them closing the program down," someone might say. Yet, it happened to Finale. 
 
-\item All notation programs, owing to the ways they operate, exert some degree of influence on the way composers compose. As early as the 1980s, Finale's \textit{Mass Mover}, \textit{Note Mover}, and MIDI playback features were already influential in shaping the way composers worked on their music.\footnote{For example, watch from 15:20 of \url{https://youtu.be/T1IRlg87Qks}.} On one hand, these features may have helped composers save time. On the other hand, their ready availability may have invited overuse. 
+\item All notation programs, owing to the ways they operate, exert some degree of influence on the way composers compose. As early as the 1980s, Finale's \textit{Mass Mover}, \textit{Note Mover}, and MIDI playback features were already influential in shaping the way composers worked on their music.\footnote{For example, watch from 15:20 of \url{https://youtu.be/T1IRlg87Qks}.} On the one hand, these features may have helped composers save time. On the other hand, their ready availability may have invited overuse. 
 
 \item The lack or underdevelopment of certain functionalities may also push composers to work in certain ways rather than others. Finale benefitted from having the flexibility to implement graphical notation, but even then, many of my composer friends found it practical to use external graphical editing programs to further refine their scores. Even from my personal experience using Finale, I encountered situations where I had to devise creative alternatives to meet my notational goals. 
 \end{enumerate}
@@ -50,7 +50,7 @@ These points implicitly highlight the benefits of learning an additional notatio
 
 
 \section{How This Document Is Structured}
-Each chapter addresses a specific element of music notation within the Western classical music tradition, such as noteheads, stems, beams, clefs, staff lines, and so on. A later chapter provides additional discussion and context.
+Each chapter of this document addresses a specific element of music notation, such as noteheads, stems, beams, and so on. Some chapters, however, cover topics specific to LilyPond coding, such as Markups and Spanners. Snippets that use more than one snippet covered in earlier chapters, thus simulating practical applications of these snippets, are covered in the chapter \textit{Combinations}. Snippets that do not appear to belong to earlier chapters find their home in the chapter \textit{Miscellanies}.
 
 Each snippet entry includes a musical example, a description, the relevant grammar, the code required for the snippet to function, and, whenever necessary, a "Discussion" section.
 
@@ -67,7 +67,7 @@ I also want to thank my friends who inspired me to start using LilyPond. It was 
 I extend my gratitude to my composition students at the University of Delaware School of Music, with whom I embarked on this journey of learning LilyPond. Even though they were not directly affected by Finale's discontinuation, they remained curious and enthusiastic about exploring this program. I hope that if the programs of their choice ever face a fate similar to Finale (though I sincerely hope they do not), they will be better equipped to adapt without the annoyance and arduous work often associated with transitioning to a new tool.
 \\
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 
 \clearpage
