--- a/DOCUMENT/markups.tex
+++ b/DOCUMENT/markups.tex
@@ -131,7 +131,7 @@ spacerVoice = \new Voice {
 }
 
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -174,7 +174,7 @@ stroke"
 { c'2. r4^\mutesign }
 
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
