--- a/DOCUMENT/miscellanies.tex
+++ b/DOCUMENT/miscellanies.tex
@@ -88,7 +88,7 @@ stanorm = {
 
 \end{verbatim}
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
