--- a/DOCUMENT/spanners.tex
+++ b/DOCUMENT/spanners.tex
@@ -208,7 +208,7 @@ stopAcciaccaturaMusic = {
 }
 \end{verbatim}
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -363,7 +363,7 @@ stroke"
 }
 \end{verbatim}
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
