--- a/DOCUMENT/stems.tex
+++ b/DOCUMENT/stems.tex
@@ -49,7 +49,7 @@ MOnStemOff = {
   \MOnStemOn a'' d'' \MOnStemOff g' c'
 }
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -103,7 +103,7 @@ SOnStemOff = {
   \SOnStemOn a'' d'' \SOnStemOff g' c'
 }
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -159,7 +159,7 @@ VOnStemOff = {
   \VOnStemOn a'' d'' \VOnStemOff g' c'
 }
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
