--- a/DOCUMENT/noteheads.tex
+++ b/DOCUMENT/noteheads.tex
@@ -65,59 +65,9 @@ jet = #(define-music-function (pitchthing width) (ly:music? number?)
     }
   }
 }
-
-jet = #(define-music-function (pitchthing width) (ly:music? number?)
-         (define p1 (ly:music-property pitchthing 'pitch))
-         (define steps (+ -6 (ly:pitch-steps p1)))
-         (define radToDeg (* 180 (/ 1 3.141592653589793)))
-
-
-         #{ #pitchthing ^\markup {
-           \postscript
-           #(string-append
-             "gsave newpath 
-              0.25 setlinewidth 
-              1.05 " (number->string
-                      (+ -2.65 (* 0.5 steps))) " moveto "
-             (number->string (* 0.5 width)) " 4 rlineto "
-             (number->string (* 0.5 width)) " -4 rlineto
-                stroke
-                newpath
-                0.1 setlinewidth 
-                 "
-             (number->string (+ 1.15 width)) " "
-             (number->string
-              (+ -2.55 (* 0.5 steps))) " moveto "
-             (number->string
-              (* radToDeg (atan (/ (* width 0.5) 4))))
-             " rotate
-                -0.125 -0.75 rlineto
-                -0.35 1 rlineto
-                0.7 0 rlineto
-                -0.35 -1 rlineto
-                closepath              
-                fill
-                grestore ")
-         } #})
-
-
-\score {
-  {
-    \jet e'2^\markup {\fontsize #-5 {[jet]}} #8
-    \jet c'4 #3
-    \stemDown  \jet b'8 #1.5
-    \jet d'8 #1.5
-  }
-
-  \layout {
-    \context {
-      \Score proportionalNotationDuration = #(ly:make-moment 1/10)    
-      \override SpacingSpanner.uniform-stretching = ##t
-    }
-  }
-}
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\break
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -274,8 +224,9 @@ modularLineNotehead =
 \end{verbatim}
 \subsection{Discussion}
 
-See \hyperref[sec:comb_strings]{Prescriptive Notation for String Instruments} for a possible use of this notehead. \\
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+See \hyperref[sec:comb_strings]{Prescriptive Notation for String Instruments} for a possible use of this notehead. \\ 
+\break
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -336,7 +287,7 @@ noteheadlessOff = {
 }
 
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -375,8 +326,8 @@ slapA = #(define-music-function (note)   (ly:music?)
   \slapA f'' \slapA e'' \slapA d'' \slapA c''
 }
 
-\end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\end{verbatim} 
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -415,8 +366,9 @@ slapB = #(define-music-function (note)   (ly:music?)
 
 \end{verbatim}
 \subsection{Discussion}
-As the musical example shows, when the Type B Slap Tongue notehead is applied to a quarter note, it could invite confusion in terms of rhythm. As a slap tongue itself is a short sound, I only use the slap tongue noteheads on eighth notes or shorter note durations. 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+As the musical example shows, when the Type B Slap Tongue notehead is applied to a quarter note, it could invite confusion in terms of rhythm. As a slap tongue itself is a short sound, I only use the slap tongue noteheads on eighth notes or shorter note durations. \\
+\break
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -547,7 +499,7 @@ slashNoteOff = \revert Voice.NoteHead.stencil
   \slashNoteOff c''1 \bar "||"
 }
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
@@ -558,7 +510,7 @@ slashNoteOff = \revert Voice.NoteHead.stencil
 \lilypondfile[staffsize=24]{/toneCluster.ly}
 \hfill
 \subsection{Description}
-Inspired by the tone cluster notation of Henry Cowell and others. See Discussion.
+Inspired by the tone cluster notation of Henry Cowell and others. See \hyperref[sec:tone_cluster_discussion]{\textbf{Discussion}}.
 \subsection{Grammar}
 \begin{verbatim}
 \toneClusterBar NOTE1 NOTE2 yOffset yLengthAdjust
@@ -566,7 +518,7 @@ Inspired by the tone cluster notation of Henry Cowell and others. See Discussion
 \toneClusterBarWhole NOTE1 NOTE2 yOffset yLengthAdjust
 \end{verbatim}
 \textbf{NB} \begin{enumerate}
-\item The order of pitch boundaries as shown by \verb|NOTE1| and \verb|NOTE2| does not matter; \verb|NOTE1| can be upper or lower pitch boundary, and vice versa for \verb|NOTE2|. See \textbf{Code}. 
+\item The order of pitch boundaries as shown by \verb|NOTE1| and \verb|NOTE2| does not matter; \verb|NOTE1| can be upper or lower pitch boundary, and vice versa for \verb|NOTE2|. See \hyperref[sec:tone_cluster_code]{\textbf{Code}}. 
 \item \verb|yOffset| indicates where the upper part of the cluster sign begins. When set to \verb|#0|, it starts right at the top line of the ordinary 5-line staff. Each positive/negative integer will bring the beginning point up/down by a space of two neighboring lines of the staff.
 \item \verb|yLengthAdjust| indicates any value by which the cluster bar may be extended or reduced. When set to \verb|#0|, the cluster bar will be as long as the distance between the lower boundary of the upper notehead and upper boundary of the lower notehead. Each positive/negative integer will add/reduce the length of the bar by a space of two neighboring lines of the staff.
 
@@ -575,9 +527,10 @@ For this reason, when the tone cluster sign is applied to a quarter-note dyad, y
 \item \verb|\toneClusterBarHollow| shows the notation (quite à la Cowell) specifically for hollowed noteheads. Some people may prefer this notation, instead.
 \item \verb|\toneClusterBarWhole| is specifically for the tone cluster notation as applied to a whole-note dyad, owing to width being wider than the quarter or half noteheads. 
 
-\item These functions may be used in tandem with other noteheads, as well as ties. See \textbf{Code}. 
+\item These functions may be used in tandem with other noteheads, as well as ties. See \hyperref[sec:tone_cluster_code]{\textbf{Code}}. 
 
 \end{enumerate}
+\label{sec:tone_cluster_code}
 \subsection{Code}
 \begin{verbatim}
 
@@ -694,6 +647,7 @@ toneClusterBarWhole =
   \toneClusterBar c'1~\harmonic e,~\harmonic #0.5 #0
 }
 \end{verbatim}
+\label{sec:tone_cluster_discussion}
 \subsection{Discussion}
 There have been some discussions on \verb|lilypond-user| mailing list in the past that readers may consult for further ideas on implementing different types of tone cluster notation: 
 \begin{itemize}
@@ -701,7 +655,7 @@ There have been some discussions on \verb|lilypond-user| mailing list in the pas
 \item \url{https://lists.gnu.org/archive/html/lilypond-user/2020-12/msg00130.html}
 
 \end{itemize}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \clearpage
 
@@ -759,7 +713,7 @@ tgr = #(define-music-function (note1) (ly:music?)
 I want to improve this code so that I can add markups to the note. It is slightly awkward at the moment.
 
 
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 \clearpage
 
 
@@ -817,7 +771,7 @@ cirX = #(define-music-function (note) (ly:music?)
   \cirX a''4 \cirX g'' \cirX f'' \cirX  e''
 }
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
