--- a/DOCUMENT/staff_lines.tex
+++ b/DOCUMENT/staff_lines.tex
@@ -130,7 +130,7 @@ bloatedStaff = {
 
 
 \end{verbatim}
-\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
 
