--- a/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
+++ b/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
@@ -4,6 +4,8 @@
 \documentclass[11pt, oneside]{book}   	% use "amsart" instead of "article" for AMSLaTeX format
 
 \usepackage[program=/opt/homebrew/bin/lilypond]{lyluatex}
+%\usepackage{bigfoot}
+\usepackage{fancyvrb}
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
@@ -15,7 +17,7 @@
     }
     
 \usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
-
+\usepackage{fancyvrb}
 \geometry{letterpaper}                   		% ... or a4paper or a5paper or ... 
 \usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
 \usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
@@ -96,6 +98,7 @@ Cite: Onishi, Yoshiaki. “LilyPond Contemporary Notation Cookbook: Snippets and
 
 \input{miscellanies.tex}
 
+\input{scheme.tex}
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 
