--- a/DOCUMENT/YO_snippets_biblio.bib
+++ b/DOCUMENT/YO_snippets_biblio.bib
@@ -60,6 +60,34 @@
 
 }
 
+@misc{RN1739,
+   author = {Liska, Urs},
+   title = {Understanding Scheme In LilyPond},
+   volume = {2024},
+   number = {December 19},
+   url = {https://scheme-book.readthedocs.io/en/latest/},
+   year = {2020},
+   type = {Web Page}
+}
 
+
+@misc{RN1740,
+   author = {Samra, Jean Abou},
+   title = {Extending LilyPond},
+   volume = {2024},
+   number = {December 19},
+   url = {https://extending-lilypond.gitlab.io/en/index.html},
+   year = {2021},
+   type = {Web Page}
+}
+
+@book{LS0001,
+author = {Friedman, Daniel P. and Felleisen, Matthias},
+title = {The little Schemer (4th ed.)},
+year = {1996},
+isbn = {0262560992},
+publisher = {MIT Press},
+address = {Cambridge, MA, USA}
+}
 
 
