--- a/DOCUMENT/combinations.tex
+++ b/DOCUMENT/combinations.tex
@@ -24,7 +24,7 @@ An example of a prescriptive notation for a string instrument. Vertical placemen
 \noteheadless
 \end{verbatim}
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 
 \score {
   {
@@ -67,7 +67,7 @@ An example of a prescriptive notation for a string instrument. Vertical placemen
   }
 }
 
-\end{verbatim}
+\end{Verbatim}
 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
@@ -96,7 +96,7 @@ Invoking two or more Text Spanners (that require \verb|\stopTextSpan| for them t
 
 \end{verbatim}
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 
 %%%%%%%%%%%%%%%%%%% A %%%%%%%%%%%%%%%%%%
 \score {
@@ -177,7 +177,7 @@ Invoking two or more Text Spanners (that require \verb|\stopTextSpan| for them t
     }
   >>
 }
-\end{verbatim}
+\end{Verbatim}
 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
