--- a/DOCUMENT/markups.tex
+++ b/DOCUMENT/markups.tex
@@ -21,7 +21,7 @@ NOTE \condDoubleThree
 
 \end{verbatim}
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 
 condOnePattern =
 #'((moveto 0.25 1.75)
@@ -130,7 +130,7 @@ spacerVoice = \new Voice {
 
 }
 
-\end{verbatim}
+\end{Verbatim}
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
@@ -154,7 +154,7 @@ Implementation of the mute sign, used to indicate that vibrating strings must be
 NOTE/REST^\mutesign
 \end{verbatim}
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 mutesign = \markup {
   \translate #'(0.5 . 0)
   \postscript
@@ -173,7 +173,7 @@ stroke"
 
 { c'2. r4^\mutesign }
 
-\end{verbatim}
+\end{Verbatim}
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
