--- a/DOCUMENT/miscellanies.tex
+++ b/DOCUMENT/miscellanies.tex
@@ -16,7 +16,7 @@ This chapter presents snippets that do not really belong to any of the other pre
 Staff lines that are shifted so that, when the note moves away from the middle C, the staff lines move accordingly. The excerpt ends with a time signature and a clef that are rotated 180 degrees.
 
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 \version "2.24.4"
 \language "english"
 
@@ -82,11 +82,7 @@ stanorm = {
     \Score   proportionalNotationDuration = #(ly:make-moment 1/7)
   }
 }
-
-
-
-
-\end{verbatim}
+\end{Verbatim}
 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
