--- a/DOCUMENT/spanners.tex
+++ b/DOCUMENT/spanners.tex
@@ -26,7 +26,7 @@ Replication of grace note brackets seen in scores by Pierre Boulez (e.g. \textit
 \end{verbatim}
 
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 \version "2.24.4"
 
 \language "english"
@@ -206,7 +206,7 @@ stopAcciaccaturaMusic = {
   }
   \graceNoteAfterBeatOff d'2
 }
-\end{verbatim}
+\end{Verbatim}
 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
@@ -238,7 +238,7 @@ Replication of accelerando and rallentando arrows chiefly seen in scores by Tōr
 \end{enumerate}
 
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 \version "2.24.4"
 
 % freely modified from: https://lsr.di.unimi.it/LSR/Item?id=1168
@@ -361,7 +361,7 @@ stroke"
     c'2 \after 2 \stopTextSpan c'2 \bar "||"
   }
 }
-\end{verbatim}
+\end{Verbatim}
 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
