--- a/DOCUMENT/staff_lines.tex
+++ b/DOCUMENT/staff_lines.tex
@@ -19,7 +19,7 @@ I made this code as a proof of concept after having read some excellent snippets
 
 \end{verbatim}
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 
 shrinkingStaff =
 #(define-music-function
@@ -129,7 +129,7 @@ bloatedStaff = {
 }
 
 
-\end{verbatim}
+\end{Verbatim}
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
