--- a/DOCUMENT/stems.tex
+++ b/DOCUMENT/stems.tex
@@ -16,7 +16,7 @@ This function attaches "M" to the stem. I have used this to indicate \textbf{M}u
 \textbf{NB} \verb |\MOnStemOn| toggles the feature on, while \verb|\MOnStemOff| toggles it off.
 
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 MOnStemOn = {
   \override Stem.length = #12
   \override Stem.details.beamed-lengths = #'(5.5)
@@ -48,7 +48,7 @@ MOnStemOff = {
   \MOnStemOn c'4 g' \MOnStemOff d'' a''
   \MOnStemOn a'' d'' \MOnStemOff g' c'
 }
-\end{verbatim}
+\end{Verbatim}
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
@@ -70,7 +70,7 @@ This function attaches "S" to the stem. I have used this to indicate \textbf{S}p
 \textbf{NB} \verb|\SOnStemOn| toggles the feature on, while \verb|\SOnStemOff| toggles it off.
 
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 SOnStemOn = {
   \override Stem.length = #12
   \override Stem.details.beamed-lengths = #'(5.5)
@@ -102,7 +102,7 @@ SOnStemOff = {
   \SOnStemOn c'4 g' \SOnStemOff d'' a''
   \SOnStemOn a'' d'' \SOnStemOff g' c'
 }
-\end{verbatim}
+\end{Verbatim}
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
@@ -125,7 +125,7 @@ This function attaches "V" to the stem. I have used this to designate a note wit
 \textbf{NB} \verb|\VOnStemOn| toggles the feature on, while \verb|\VOnStemOff| toggles it off.
 
 \subsection{Code}
-\begin{verbatim}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
 VOnStemOn = {
   \override Stem.no-stem-extend = ##f
   \override Stem.length = #12
@@ -158,7 +158,7 @@ VOnStemOff = {
   \VOnStemOn c'4 g' \VOnStemOff d'' a''
   \VOnStemOn a'' d'' \VOnStemOff g' c'
 }
-\end{verbatim}
+\end{Verbatim}
 \hyperref[sec:toc]{\textbf{Table of Contents}}
 
 \vfill \break
