--- a/DOCUMENT/noteheads.tex
+++ b/DOCUMENT/noteheads.tex
@@ -506,6 +506,98 @@ slashNoteOff = \revert Voice.NoteHead.stencil
 %%%%%%%%%%%%%%%%%%%
 
 
+\section {Square Notehead}
+\lilypondfile[staffsize=24]{/squarenotes.ly}
+\hfill
+\subsection{Description}
+Filled and hollow square noteheads.
+
+\subsection{Grammar}
+\begin{verbatim}
+\squareHollowNotehead NOTE
+\squareHollowNoteheadOn NOTES
+\squareHollowNoteheadOff 
+\squareFilledNotehead NOTE
+\squareFilledNoteheadOn NOTES
+\squareFilledNoteheadOff
+
+\slashNoteOn NOTE
+\slashNoteOff 
+\end{verbatim}
+\textbf{NB} \verb|\squareHollowNotehead| and \verb|\squareFilledNotehead| only affect one note, owing to the \verb|\once \override| functions within the code. For a group of notes, use \verb|\squareHollowNoteheadOn| or \verb|\squareFilledNoteheadOn|. \verb|\squareHollowNoteheadOff| and \verb|\squareFilledNoteheadOff| cancel the application.
+\subsection{Code}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
+\version "2.24.4"
+
+% See also: https://lsr.di.unimi.it/LSR/Item?id=516
+
+squareHollowNoteheadDesign =
+#(ly:make-stencil '(path 0.15 (moveto  0.05 0.425
+                                       rlineto 1. 0
+                                       rlineto 0 -0.875
+                                       rlineto -1. 0
+                                       closepath)
+                         )
+                  (cons -0.025 1.125)
+                  (cons -1 1))
+
+squareHollowNotehead =
+#(define-music-function (note) (ly:music?)
+   #{\once \override Voice.NoteHead.stencil =
+     \squareHollowNoteheadDesign $note #})
+
+squareHollowNoteheadOn =
+#(define-music-function (note) (ly:music?)
+   #{\override Voice.NoteHead.stencil =
+     \squareHollowNoteheadDesign $note #})
+
+squareHollowNoteheadOff = \revert Voice.NoteHead.stencil
+
+squareFilledNoteheadDesign =
+#(ly:make-stencil '(path 0.15 (moveto  0.05 0.425
+                                       rlineto 1. 0
+                                       rlineto 0 -0.875
+                                       rlineto -1. 0
+                                       closepath)
+                         round
+                         round
+                         #t)
+                  (cons -0.025 1.125)
+                  (cons -1 1))
+
+
+squareFilledNotehead =
+#(define-music-function (note) (ly:music?)
+   #{\once \override Voice.NoteHead.stencil =
+     \squareFilledNoteheadDesign $note #})
+squareFilledNoteheadOn =
+#(define-music-function (note) (ly:music?)
+   #{\override Voice.NoteHead.stencil =
+     \squareFilledNoteheadDesign $note #})
+
+squareFilledNoteheadOff = \revert Voice.NoteHead.stencil
+
+{
+  \squareHollowNotehead c'8
+  \squareHollowNoteheadOn d' e' f'
+  \squareHollowNoteheadOff
+  \squareFilledNotehead c'8
+  \squareFilledNoteheadOn d' e' f'
+  \squareFilledNoteheadOff 
+  \squareHollowNotehead a''8
+  \squareHollowNoteheadOn g'' f'' e''
+  \squareHollowNoteheadOff
+  \squareFilledNotehead a''8
+  \squareFilledNoteheadOn g'' f'' e''
+  \squareFilledNoteheadOff
+}
+\end{Verbatim}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
+
+\vfill \break
+
+%%%%%%%%%%%%%%%%%%%
+
 \section {Tone Cluster}
 \lilypondfile[staffsize=24]{/toneCluster.ly}
 \hfill
