--- a/DOCUMENT/foreword.tex
+++ b/DOCUMENT/foreword.tex
@@ -7,14 +7,14 @@ Because I use LilyPond actively in my daily compositional and musical typesettin
 
 \section{README}
 
-I make this document public because I wish to return something useful to the LilyPond community, but also to seek and implement any improvements other users may find in my codes. Please feel free to reach out to the email address shown on Page 1 of this document.
-
-If you have found any of the codes useful, please feel free to use them in your LilyPond files. Crediting me would be greatly appreciated especially if you use it verbatim or in its slightly modified version:
+This document and the codes contained herein are under the MIT License. So long as you include the copyright as well as the MIT License permission notices, please feel free to use my codes in your LilyPond files or modify them according to your specific need. Furthermore, crediting in the following manner is greatly appreciated:
 
 \begin{verbatim}
 % Original Code written by Yoshiaki Onishi
 % https://github.com/yoshiakionishi/lilypond-snippets
 \end{verbatim}
+
+I make this document public because I wish to return something useful to the LilyPond community, but also to seek and implement any improvements other users may find in my codes. Please feel free to reach out to the email address shown on the title page of this document.
 
 In the interest of making the codes found in this document available to as many people as possible, I have avoided using copyrighted musical examples. However, wherever appropriate, I have provided bibliographical sources. Furthermore, I acknowledge that, just as academic work in humanities goes, my ideas are built on those that are formulated by others; as such, whenever there is a direct source of inspiration for formulating a code, I provide sources. 
 
