--- a/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
+++ b/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
@@ -16,11 +16,11 @@
     pdfpagemode=FullScreen,
     }
     
-\usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
+\usepackage{geometry}           % See geometry.pdf to learn the layout options. There are lots.
 \usepackage{fancyvrb}
-\geometry{letterpaper}                   		% ... or a4paper or a5paper or ... 
-\usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
-\usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
+\geometry{letterpaper}          % ... or a4paper or a5paper or ... 
+\usepackage[parfill]{parskip}   % Activate to begin paragraphs with an empty line rather than an indent
+\usepackage{graphicx}			% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
 \usepackage[toc,page]{appendix}
@@ -80,9 +80,13 @@ Cite: Onishi, Yoshiaki. “LilyPond Contemporary Notation Cookbook: Snippets and
 
 \mainmatter
 
+\input{articulations.tex}
+
 \input{beams.tex}
 
 \input{clefs.tex}
+
+\input{dynamics.tex}
 
 \input{noteheads.tex}
 
