--- a/DOCUMENT/foreword.tex
+++ b/DOCUMENT/foreword.tex
@@ -58,7 +58,7 @@ Each snippet entry includes a musical example, a description, the relevant gramm
 The version of LilyPond used to create these snippets is \verb|2.24.4|.
 
 \section{Acknowledgements}
-I thank the supportive community of LilyPond users, whose email exchanges on LilyPond's mailing list have inspired me greatly.
+I thank the supportive community of LilyPond users, whose exchanges on \Verb|lilypond-user| mailing list have inspired me greatly.
 
 Even though I have not met him, I am grateful to Ben Lemon for his generosity in creating and sharing his LilyPond tutorial videos on YouTube. These videos were immensely helpful during the initial stages of learning LilyPond.
 
