--- a/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
+++ b/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
@@ -23,6 +23,7 @@
 \usepackage{graphicx}			% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
+\usepackage{amsmath}
 \usepackage[toc,page]{appendix}
 \usepackage[notes,backend=biber]{biblatex-chicago}
 \addbibresource{YO_snippets_biblio.bib}
@@ -92,11 +93,15 @@ Cite: Onishi, Yoshiaki. “LilyPond Contemporary Notation Cookbook: Snippets and
 
 \input{markups.tex}
 
+\input{rhythm.tex}
+
 \input{spanners.tex}
 
 \input{staff_lines.tex}
 
 \input{stems.tex}
+
+\input{time_signatures.tex}
 
 \input{combinations.tex}
 
