--- a/DOCUMENT/YO_snippets_biblio.bib
+++ b/DOCUMENT/YO_snippets_biblio.bib
@@ -2,7 +2,7 @@
    author = {Sparnaay, Harry},
    title = {The Bass Clarinet: A Personal History},
    publisher = {Periferia Sheet Music},
-   year = {2012},
+   year = {2012}
 }
 
 @book{RN1695,
@@ -10,10 +10,10 @@
    title = {The techniques of flute playing = Die Spieltechnik der Flöte},
    publisher = {Bärenreiter},
    address = {Kassel ; New York},
-   year = {2003},
+   year = {2003}
 }
 
-@misc{RN1733,
+@book{RN1733,
    author = {Services, NYC Music},
    title = {Finale 1988 promotional video},
    pages = {https://youtu.be/T1IRlg87Qks},
@@ -29,38 +29,38 @@
    publisher = {G. Schirmer},
    address = {New York - Boston,},
    pages = {3 p.l., 53 p.},
-   year = {1921},
+   year = {1921}
 }
 @book{RN1736,
    author = {Takemitsu, Tōru},
    title = {Fantasma/cantos : for clarinet and orchestra},
    publisher = {Schott ; Schott Japan},
-   year = {1993},
+   year = {1993}
 
 }
 @book{RN1735,
    author = {Takemitsu, Tōru},
    title = {Les yeux clos II : for piano},
    publisher = {Schott ; Schott Japan},
-   year = {1990},
+   year = {1990}
 
 }
 @book{RN1738,
    author = {Boulez, Pierre},
    title = {Sur incises : pour trois pianos, trois harpes et trois percussions-claviers (1996/1998)},
    publisher = {Universal Edition},
-   year = {1998},
+   year = {1998}
 
 }
 @book{RN1737,
    author = {Boulez, Pierre},
    title = {... explosante-fixe ... transitoire VII : (version 1991/93)},
    publisher = {Universal Edition},
-   year = {1991},
+   year = {1991}
 
 }
 
-@misc{RN1739,
+@book{RN1739,
    author = {Liska, Urs},
    title = {Understanding Scheme In LilyPond},
    volume = {2024},
@@ -71,7 +71,7 @@
 }
 
 
-@misc{RN1740,
+@book{RN1740,
    author = {Samra, Jean Abou},
    title = {Extending LilyPond},
    volume = {2024},
@@ -89,5 +89,100 @@ isbn = {0262560992},
 publisher = {MIT Press},
 address = {Cambridge, MA, USA}
 }
+
+@book{RN1741,
+   author = {Gould, Elaine},
+   title = {Behind bars : the definitive guide to music notation},
+   publisher = {Faber Music},
+   address = {London},
+   year = {2011},
+   type = {Book}
+}
+
+
+@book{RN1742,
+   author = {Adès, Thomas},
+   title = {Asyla : for large orchestra},
+   publisher = {Faber Music},
+   year = {1997}
+
+}
+@book{RN1745,
+   author = {Beyer, Stefan},
+   title = {Marsch},
+   publisher = {Manuscript},
+   year = {2013-14}
+
+}
+
+@book{RN1743,
+   author = {Beyer, Stefan},
+   title = {Bleib hier. Schau zu. Mach kein Geräusch.},
+   publisher = {Manuscript},
+   year = {2017}
+
+}
+
+@book{RN1744,
+   author = {Beyer, Stefan},
+   title = {Mittel und Zwecke (Boulevard)},
+   publisher = {Manuscript},
+   year = {2014}
+
+}
+
+@book{RN1747,
+   author = {Beyer, Stefan},
+   title = {Most of My Clients Come Back},
+   publisher = {Manuscript},
+   year = {2012-13}
+
+}
+
+@book{RN1746,
+   author = {Beyer, Stefan},
+   title = {Mass und Gewicht},
+   publisher = {Manuscript},
+   year = {2021}
+}
+
+@book{RN1748,
+   author = {Onishi, Yoshiaki},
+   title = {Gz II : for two accordions},
+   publisher = {Edition Gravis},
+   address = {Brühl and Berlin},
+   year = {2024}
+}
+
+@book{RN1749,
+   author = {Czernowin, Chaya},
+   title = {String Quartet},
+   publisher = {Schott},
+   year = {1995}
+}
+
+@book{RN1751,
+   author = {Czernowin, Chaya},
+   title = {Lovesong : for mixed ensemble},
+   publisher = {Schott},
+   year = {2010}
+}
+
+@book{RN1750,
+   author = {Czernowin, Chaya},
+   title = {Streams (Slow Summer Stay I) : for 8 players},
+   publisher = {Schott},
+   year = {2012}
+}
+
+@book{RN1752,
+   author = {Czernowin, Chaya},
+   title = {At the fringe of our gaze : for Orchestra and Concertino Group},
+   publisher = {Schott},
+   year = {2012/13}
+}
+
+
+
 
 
